# AgentCall

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  agentcall.py  code-review-recent.md  code-review.md  package-lock.json  package.json  plan_review_v0.7_OPUS.md  plan_review_v0.8_OPUS.md  pyproject.toml  python_debt_audit_OPUS.md  report.md  report_review_OPUS.md
config/: agentcall.example.json
crates/agentcall-daemon/: Cargo.toml
crates/agentcall-daemon/src/: accepted_live.rs  acp.rs  acp_supervisor.rs  actor.rs  commands.rs  confidence.rs  config.rs  control.rs  crypto.rs  errors.rs  events.rs  hooks.rs  http.rs  main.rs  mcp.rs  ownership.rs  process.rs  projection.rs  prompt_gate.rs  routes.rs  runtime.rs  runtime_lock.rs  runtime_pty.rs  runtime_sdk.rs  scheduler.rs  session.rs  state.rs  store.rs  store_json.rs  store_sqlite.rs  summary.rs  terminal.rs  terminal_screen.rs  util.rs  worker_state.rs  workspace_audit.rs
crates/agentcall-daemon/testdata/confidence/: report_confidence_cases.json
docs/: HANDOFF-next-session.md  README.md  about.md  agentapi-adapter.md  agentcall-architecture-map.html  agentcall-flow-skill.md  agentcall-protocol.md  agentcall-supervisor-skill.md  architecture.md  codex-claude-alignment-safety.md  gpt-pro-feedback-v5.0.md  mcp-transport-recovery.md  pro-feedback-v5.4-analysis.md  report_v4.2-plan-review.md  rust-daemon-architecture.md  session-supervisor.md  sop-protocol.md  v0.4-orchestration-roadmap.md  v0.5-implementation.md  v0.5.1-architecture.md  v1.0-release-notes.md  v1.0-tmux-pty-archive.md  v2.0-architecture.md  v2.2-acp-sop-worker-gate.md  v2.4-acp-background-supervisor.md  v3.0-mcp.md  v3.0-pty-utility-workers.md  v4.0-plugin-provided-mcp.md  v4.2-readable-tui-control.md  v4.3-observability-hygiene.md  v5.0-architecture-refresh.md  v5.0-code-plan.md  v5.1-code-plan.md  v5.2-code-plan.md  v5.3-code-plan.md  v5.4-code-plan.md  v5.4.4-code-plan.md  v5.5-code-plan.md  v6.0-code-plan.md  v6.1-code-plan.md  (+3 more)
reports/: review_v52_code_robustness.md
scripts/: agentcall-claude-hook.py  agentcall-codex-hook.py  agentcall_arch_audit.py  agentcall_dev.py  agentcall_real_worker_smoke.py  agentcall_runtime_release.py  align_hook_logs.py  codex_mcp_transport_recovery.py  fake_pty_worker.py  generate_agentcall_skill.py  inject-console-input.ps1  inject-window-paste.ps1  inject_console_input.py  inject_window_paste.py  install-claude-hooks.ps1  install-codex-hooks.ps1  install_claude_hooks.py  install_codex_hooks.py
target-select-option-check/: .rustc_info.json
target-v061-hook/: .rustc_info.json
tests/: conftest.py  test_agentcall_arch_audit.py  test_agentcall_skill_generator.py  test_sop_flow.py  test_v061_hook_daemon_ingest.py  test_v08b_acp_parity.py
viewer/: index.html  proxy-index.html  server.py  tmux.html  (+1 more)
(+252 files in other folders)
