[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcall"
version = "6.9.0"
description = "Local control plane for Codex-led Claude Code agent clusters"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentCall" }]
dependencies = []

[project.scripts]
agentcall = "agentcall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
